2012-09-09  Keishi Hattori  <keishi@webkit.org>

        REGRESSION(r127558): Fix a crash in DateTimeChooserImpl::didClosePopup
        https://bugs.webkit.org/show_bug.cgi?id=96222

        Reviewed by Kent Tamura.

        DateTimeChooserClient will delete DateTimeChooserImpl inside didEndChooser()
        so we shouldn't be changing the members after that.

        Testing covered by fast/forms/date/calendar-picker-appearance-pre-100.html.

        * src/DateTimeChooserImpl.cpp:
        (WebKit::DateTimeChooserImpl::didClosePopup):

2012-09-09  Kenichi Ishibashi  <bashi@chromium.org>

        [Chromium] Unreviewed gardening after r127907

        Fix CCRenderPassTest::copyShouldBeIdenticalExceptIdAndQuads

        * tests/CCRenderPassTest.cpp:
        (CCRenderPassSize): Changed type of m_id

2012-09-09  Emil A Eklund  <eae@chromium.org>

        Rename Node::getRect/getPixelSnappedRect and remove ContainerNode::getRect
        https://bugs.webkit.org/show_bug.cgi?id=81413

        Reviewed by David Hyatt.

        Update WebViewImpl to call boundingBox/pixelSnappedBoundingBox.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::computeBlockBounds):
        (WebKit::WebViewImpl::applyAutofillSuggestions):
        (WebKit::WebViewImpl::refreshAutofillPopup):

2012-09-09  James Robinson  <jamesr@chromium.org>

        [chromium] webkit_platform should only be linked into the webkit target
        https://bugs.webkit.org/show_bug.cgi?id=96213

        Reviewed by Adrienne Walker.

        The Platform.gyp:webkit_platform target provides the implementation of several WEBKIT_EXPORTed symbols. It only
        makes sense as a target of WebKit.gyp:webkit, other targets shouldn't directly depend on it.

        * WebKit.gyp:

2012-09-09  James Robinson  <jamesr@chromium.org>

        [chromium] Use WebCompositorSupport creation functions in GraphicsLayerChromiumTest
        https://bugs.webkit.org/show_bug.cgi?id=96212

        Reviewed by Adrienne Walker.
